# synth-data-gen

./: .gitignore  README.md  prompt-reccomendations.md  pyproject.toml  synthdata_plan.md
.serena/: project.yml
examples/: ruleset.yaml
examples/scenarios/: black_friday.yaml  maintenance_window.yaml
synth/: __init__.py  __main__.py  cache.py  cli.py  correlations.py  generate.py  io.py  llm.py  plugin_registry.py  privacy.py  profile.py  report.py  rules.py  schemas.py  temporal.py  text_rules.py  utils.py  validate.py
synth/plugins/: __init__.py
synth/plugins/generators/: __init__.py
synth/plugins/validators/: __init__.py
templates/: field_templates.yaml  report.html.j2
tests/: __init__.py  test_analysis_modules.py  test_generator_enhancements.py  test_llm_client.py  test_pipeline.py  test_text_rules.py
